<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:gravity="center"
    android:text="@string/Titulo"
    android:textSize="@dimen/letraTitulo"
    android:textStyle="bold"
    android:layout_marginTop="@dimen/marginTopBase"
    android:layout_height="wrap_content">
</TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTopBase"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/letraBase"
            android:text="@string/Artista"
            android:layout_height="wrap_content">
        </TextView>

        <EditText
            android:id="@+id/artistaTxt"
            android:layout_width="match_parent"
            android:textSize="@dimen/hintBase"
            android:layout_weight="1"
            android:hint="@string/HintArtista"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/Fecha"
            android:textSize="@dimen/letraBase"
            android:layout_height="wrap_content"></TextView>
        <EditText
            android:id="@+id/calendarioTxt"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:inputType="date"
            android:focusable="false"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>


</LinearLayout>